<resources>
    <string name="app_name">Book4Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectgenre">Select genre</string>
    <string name="username">Username</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="alertCameraGallery">Choose image from:</string>
    <string name="alertLogout">Are you sure you want to logout?</string>
    <string name="confirmYes">Yes</string>
    <string name="confirmNo">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="bookName">Book Name</string>
    <string name="bookDescription">Description</string>
    <string name="bookGenre">Genre</string>
    <string name="mylisting">My Listings</string>
    <string name="alertDelete">Are you sure you want to delete this listing?</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="about_book">About the Book</string>
    <string name="title">Title</string>
    <string name="title_hint">Enter title of the book</string>
    <string name="description_hint">Tell us more about the book!</string>
    <string name="submit">Submit</string>
    <string name="recommend">Recommended For You</string>
    <string name="search_hint">Enter Book Title...</string>
    <string name="trade">Start Trading!</string>
    <string name="read">Read</string>
    <string name ="login_here">Login here</string>
    <string name ="registered">Already registered?</string>
    <string name ="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_here">Register here</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>