<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="15dp">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:src="@drawable/defaultbook"
            android:background="@null">

        </ImageView>

        <TextView
            android:id="@+id/bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookName"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/bookImage"
            android:layout_marginStart="10dp">

        </TextView>

        <TextView
            android:id="@+id/bookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookDescription"
            android:textSize="20sp"
            android:layout_toEndOf="@id/bookImage"
            android:layout_marginStart="10dp"
            android:layout_below="@id/bookName">

        </TextView>

        <TextView
            android:id="@+id/bookGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookGenre"
            android:textSize="20sp"
            android:layout_toEndOf="@id/bookImage"
            android:layout_marginStart="10dp"
            android:layout_below="@id/bookDescription">

        </TextView>

    </RelativeLayout>

</androidx.cardview.widget.CardView>