<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bluegradient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/profilePicture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@null"
                android:src="@drawable/defaultusersquare"
                android:scaleType="fitXY">


            </ImageButton>

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_alignParentRight="true">

            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textColor="#FFFFFF"
                android:textSize="22sp">

            </TextView>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="40dp"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="22sp">

            </EditText>

            <Button
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:text="@string/changepassword">


            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:layout_marginTop="200dp">
            </TextView>

            <ImageButton
                android:id="@+id/editPreference"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="202dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/editicon">


            </ImageButton>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
