<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".mainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/orange" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:text="@string/dashboard"
                android:textColor="#FFFFFF"
                android:textSize="22sp">

            </TextView>


            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:background="@android:color/transparent"
                android:text="@string/logout"
                android:textSize="13sp">

            </Button>


    </LinearLayout>

    <!--Top Profile Section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="80dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:background="@drawable/my_gradient"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/profilePicture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/defaultusersquare">

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/userName"
                android:text="blank"
                android:textColor="@color/black"
                android:textSize="22sp">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="282dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circular_grey_bordersolid"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mylisting"
                    android:textColor="@color/black"
                    android:textSize="22sp">

                </TextView>

<!---->

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
